# lorezu_agent_todo

./: .gitignore  CHANGELOG.md  PATH_RESOLUTION.md  README.md  todos.json
.github/workflows/: ci.yml
.secret-scout/: .gitignore  README.md  config.toml  rules.yaml
todo-cli/: LICENSE  README.md  TROUBLESHOOTING.md  pyproject.toml
todo-cli-vscode-extension/: FIND_COMMAND.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  WORKSPACE_SETUP.md  package-lock.json  package.json
todo-cli-vscode-extension/src/: extension.ts
todo-cli/src/todo_cli/: cli.py  config.py  housekeeping.py  main.py  model.py  paths.py  render.py  storage.py  ui.py
todo-cli/tests/: conftest.py  test_cli_parser.py  test_concurrency.py  test_path_resolution.py  test_storage_basic.py
